# prevent-submodule-regression

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
prevent_submodule_regression/: cli.py  parser.py
tests/: test_prevent_submodule_regression.py
