[tool.poetry]
name = "prevent-submodule-regression"
version = "0.1.0"
description = ""
authors = ["Erik Ogan <erik@ogan.net>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
